# avid-companion

./: APPLY_FIX.md  README.md  README_APPLY.txt  README_v15.md  README_v8.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
docs/: AUTO_UPDATES.md  architecture.md
plugin/: PI_AvidBridge.py
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bridge.rs  main.rs  sit_manager.rs  xp_locator.rs  xp_plugin.rs
src/components/: BridgeStatus.tsx
src/lib/: auth.ts  avid-api.ts  bridge-status.ts  sit-compose.ts  sit-source.ts  updater.ts  xp-locate.ts
xppython3-plugin/: PI_AvidBridge.py
